--- a/gui/config_common.ui
+++ b/gui/config_common.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>540</width>
-    <height>357</height>
+    <height>388</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -230,7 +230,7 @@
        <item>
         <widget class="QLabel" name="label_6">
          <property name="text">
-          <string>negative entry exp (s)</string>
+          <string>Negative entry exp (s)</string>
          </property>
         </widget>
        </item>
